# display_Health_Control_Instrumentation_App

./: .gitignore  README.md  display_instrumentation.connect  pyproject.toml
multi-channel_template/: app.connect
scripts/: run_acquisition.py
src/display_instrumentation/: acquisition.py  health.py  loop.py  models.py  nominal_sink.py  sink.py  xrandr.py
stable/: nominal_sink.py
